Relatório de cobertura (usando o pacote nyc de istambul) | Mocha - estrutura de teste de unidade Javascript

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Desenvolvendo testes unitários comm Mocha",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=html mocha './test/**/*.spec.js'"
+    "test": "mocha './test/**/*.spec.js'",
+    "coverage": "nyc --reporter=html npm run test"
   },
   "author": "Gilberto Jr",
   "license": "ISC",
