--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Desenvolvendo testes unitários comm Mocha",
   "main": "index.js",
   "scripts": {
-    "test": "mocha './test/**/*.spec.js'",
+    "test": "mocha './test/**/*.spec.js' --watch",
     "coverage": "nyc --reporter=html npm run test"
   },
   "author": "Gilberto Jr",
